--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <div>
         <h1>Hey, my love</h1>
-        <span>i Miss you, Oyegbami Gideon Akinpelumi Olapeju Omolayo</span>
+        <span>I Miss you, Oyegbami Gideon Akinpelumi Olapeju Omolayo</span>
         <p>Yesterday, you asked me how i feeel when i do not talk to you and i said i can't relate but now i can relate cause i'm badly missing you and you know you could have just dropped a message that you'd be busy the whole day.</p>
         <p>Always Remember that marvelous loves you so much and she wouldn't trade you for anything </p>
         <p>Thank you for making me be the better version of myself and thank you for always been there for me when i need you and thank you for caring for me</p>
-        <p>i know i might be childish at times </p>
+        <p>i know i might be childish at times but thank you for being that matured guy that loves peace, but sometimes i just feel bad to have stressed you that much for almost 3 years before i could accept to go into a relationship with you all because i couldn't admit i was in love with you cause i thought it was just a clear friendship but later realized its more than that </p>
+        <p>You're my world</p>
+        <p>My Proverbs 31 man and My</p>
     </div>
 </body>
 </html>
