--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Thank you for making me be the better version of myself and thank you for always been there for me when i need you and thank you for caring for me</p>
         <p>i know i might be childish at times but thank you for being that matured guy that loves peace, but sometimes i just feel bad to have stressed you that much for almost 3 years before i could accept to go into a relationship with you all because i couldn't admit i was in love with you cause i thought it was just a clear friendship but later realized its more than that </p>
         <p>You're my world</p>
-        <p>My Proverbs 31 man and My</p>
+        <p>My Proverbs 31 man and My Ephesians 5 vs 25-28 Man, And I Love you so much with all of my &#x1F493;</p>
     </div>
 </body>
 </html>
