--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>You're my world</p>
         <p>ololufe MI owon</p>
         <p>My other half</p>
+        <p>My guyest guy &#x1F49F;</p>
         <p>I can't even imagine my life without you in it</p>
         <p>My dearest future husband</p>
         <p>My Proverbs 31 man and My Ephesians 5 vs 25-28 Man, And I Love you so much with all of my being and heart &#x1F493;</p>
