--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We are revived again and never to go back</title>
+    <style>
+        *{
+            
+            
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -20,7 +26,7 @@
         <p>I can't even imagine my life without you in it</p>
         <p>My dearest future husband</p>
         <p>My Proverbs 31 man and My Ephesians 5 vs 25-28 Man, And I Love you so much with all of my being and heart &#x1F493;</p>
-        <p>I wish you were right here with me but i know it's about the matter of time that we'd be together forever, cause there are no windows and doors for escape....i hope you get that</p>
+        <p>I wish you were right here with me but i know it's about the matter of time that we'd be together forever, cause there are no windows and doors for escape....i hope you get that and i'm so happy seeing what the future has in stock for us and that our dreams align&#x1F46B;</p>
     </div>
 </body>
 </html>
